app/assets/stylesheets/locals/plain.css.scss
.plain {
    background: transparent !important;
    #player {
        #transcript {
            // Don't include the transcript when 
            // the whole player is in an iframe.
            display: none;
        }
    }
    .transcript {
        .speaker { 
            display: table-cell;
            vertical-align: bottom;
            height: 2.5em;
        }
        .incident,h3 {
            display: none;
            // Title at top of transcript isn't necessary: We know what we're looking at.
        }
        .play-from-here::before {
            content: '\25B6'; // right-pointing triangle
            cursor: pointer;
            color: $dark-blue;
            padding-right: 0.3em;
        }
        .para {
            border: 2px solid transparent;
            border-radius: 8px;
        }
        .para.current {
            border-color: $light-grey
        }
    }
}

